# ocapi

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/client/: info.rs  mod.rs  search.rs  series.rs
src/client/api/: events.rs  mod.rs
src/core/: info.rs  mod.rs  search.rs  series.rs
src/core/api/: events.rs  mod.rs
