[package]
name = "ocapi"
version = "0.0.0"
edition = "2021"
authors = ["Tanja <rust@tanja.pw>"]
description = "A Rust library for the Opencast REST API (unofficial)"
documentation = "https://docs.rs/ocapi"
homepage = "https://github.com/Tanja-4732/ocapi#readme"
repository = "https://github.com/Tanja-4732/ocapi"
license = "LGPL-3.0-or-later"
keywords = ["opencast", "api", "client", "rest", "crawler"]
categories = ["api-bindings"]
include = ["/src", "/Cargo.toml", "/README.md", "/LICENSE.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
